--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,12 +4,14 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
+
 }
 
 h1{
   width: 100%;
   text-align: center;
-  background-color: black;
   margin: 0;
   padding: 20px;
+  font-weight: bold;
 }
+
