--- a/src/components/Funkopop/Funkopop.css
+++ b/src/components/Funkopop/Funkopop.css
@@ -6,8 +6,27 @@
 }
 
 .btn {
-    margin: 0 10px;
-    
+    margin: 0 10px; 
+    font-size: 15px;
+    padding: 4px;
+}
+
+.panel-title{
+    font-size: 30px;
+    text-align: center;
+    padding: 10px;
+    background-color: lightgray;
+}
+.panel-body{
+    text-align: center;
+}
+
+p{
+    font-size: 20px;
+}
+
+.panel{
+    background-color: whitesmoke;
 }
 
 
