--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
   justify-content: center;
   margin: 0 0 20px;
   width: 100%;
-  padding: 10px;
+  background-color:#E69598;
   
 }
 
@@ -16,4 +16,6 @@
 .NavBar-welcome {
   color: black;
 }
+
+
 
