--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -12,9 +12,6 @@ h1{
   text-align: center;
   margin: 0;
   padding: 5px;
-  /* font-weight: bold; */
   background-color: #C82B30;
-  /* background-color: #D9534F; */
-  color: #B8B8B8;
-  
+  color: #F5F5F5;
 }
